force-app/main/default/objects/AI_Provider_Override__c/AI_Provider_Override__c.object-meta.xml
<CustomObject>
  <label>AI Provider Override</label>
  <pluralLabel>AI Provider Overrides</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>AI Provider Override Number</label>
    <displayFormat>PROV-{0000}</displayFormat>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>