force-app/main/default/objects/AI_Provider_Override__c/fields/API_Endpoint__c.field-meta.xml
<CustomField>
  <fullName>API_Endpoint__c</fullName>
  <label>API Endpoint</label>
  <type>Text</type>
  <length>255</length>
</CustomField>