force-app/main/default/objects/AI_Provider_Override__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
  <fullName>Last_Modified_Date__c</fullName>
  <label>Last Modified Date</label>
  <type>DateTime</type>
</CustomField>