force-app/main/default/objects/AI_Provider_Override__c/fields/Provider_Metadata_Id__c.field-meta.xml
<CustomField>
  <fullName>Provider_Metadata_Id__c</fullName>
  <label>Provider Metadata Id</label>
  <type>Text</type>
  <length>255</length>
</CustomField>