force-app/main/default/objects/AI_Provider_Override__c/fields/Timeout_ms__c.field-meta.xml
<CustomField>
  <fullName>Timeout_ms__c</fullName>
  <label>Timeout (ms)</label>
  <type>Number</type>
  <precision>18</precision>
  <scale>0</scale>
</CustomField>